Refactor: Replace deprecated Double constructor with Double.valueOf
- Updated instances of `new Double(value)` to `Double.valueOf(value)` across multiple files to improve performance and adhere to best practices.
- Modified variable assignments and method calls in classes such as XJepExample, JepTest, RpTest, and various function implementations (e.g., Add, Subtract, Multiply).
- Ensured consistent usage of `Integer.valueOf()` in relevant test cases and examples.
- Enhanced readability and maintainability of the codebase by removing unnecessary object creation.