@@ -39,7 +39,7 @@ public class ArcSine extends PostfixMathCommand
 		}
 		else if (param instanceof Number)
 		{
-			return new Double(Math.asin(((Number)param).doubleValue()));
+			return Double.valueOf(Math.asin(((Number)param).doubleValue()));
 		}
 
 		throw new ParseException("Invalid parameter type");
