@@ -26,8 +26,8 @@ import org.nfunk.jep.type.*;
  * @since 2.3.0 beta 1 a bit of a rewrite to make sub classing easier, now allows Complex to be compared to Double i.e. 1+0 i == 1.
  * @since 2.3.0 beta 2 changed the internal lt,gt,le,ge,ne and eq method to return boolean.
  * If this breaks anything use
- * 		if(lt(obj1,obj2)) inStack.push(new Double(1));
- *		else 	inStack.push(new Double(0));
+ * 		if(lt(obj1,obj2)) inStack.push(Double.valueOf(1));
+ *		else 	inStack.push(Double.valueOf(0));
  */
 public class Comparative extends PostfixMathCommand
 {
@@ -68,8 +68,8 @@ public class Comparative extends PostfixMathCommand
 		case NE: res = ne(param1,param2); break;
 		case EQ: res = eq(param1,param2); break;
 		}
-		if(res) inStack.push(new Double(1));
-		else inStack.push(new Double(0));
+		if(res) inStack.push(Double.valueOf(1));
+		else inStack.push(Double.valueOf(0));
 	}
 	
 	public boolean lt(Object param1, Object param2)	throws ParseException
@@ -220,7 +220,7 @@ public class Comparative extends PostfixMathCommand
 			double x = ((Number)param1).doubleValue();
 			double y = ((Number)param2).doubleValue();
 			int r = (x>=y) ? 1 : 0;
-			return new Double(r);
+			return Double.valueOf(r);
 		}
 		throw new ParseException(">= not defined for object of type "+param1.getClass().getName()+" and "+param1.getClass().getName());
 	}
@@ -240,7 +240,7 @@ public class Comparative extends PostfixMathCommand
 					throw new ParseException("Relational operator type error");
 			}
 			
-			inStack.push(new Double(r));//push the result on the inStack
+			inStack.push(Double.valueOf(r));//push the result on the inStack
 		}
 		else if ((param1 instanceof Number) && (param2 instanceof Number))
 		{
@@ -272,7 +272,7 @@ public class Comparative extends PostfixMathCommand
 					throw new ParseException("Unknown relational operator");
 			}
 			
-			inStack.push(new Double(r));//push the result on the inStack
+			inStack.push(Double.valueOf(r));//push the result on the inStack
 		} 
 		else if ((param1 instanceof String) && (param2 instanceof String))
 		{
@@ -290,7 +290,7 @@ public class Comparative extends PostfixMathCommand
 					throw new ParseException("Relational operator type error");
 			}
 			
-			inStack.push(new Double(r));//push the result on the inStack
+			inStack.push(Double.valueOf(r));//push the result on the inStack
 		} else
 		{
 			throw new ParseException("Invalid parameter type");
