@@ -29,9 +29,9 @@ public class Imaginary extends PostfixMathCommand
 	public Number im(Object param) throws ParseException {
 		
 		if (param instanceof Complex)
-			return new Double(((Complex)param).im());
+			return Double.valueOf(((Complex)param).im());
 		else if (param instanceof Number)
-			return new Double(0);
+			return Double.valueOf(0);
 		
 
 		throw new ParseException("Invalid parameter type");
