@@ -72,12 +72,12 @@ public class Power extends PostfixMathCommand
 			if(dval == ival)
 			{
 				if(dval>=0)
-					return new Double(power(d1.doubleValue(),ival));
+					return Double.valueOf(power(d1.doubleValue(),ival));
 				else
-					return new Double(1.0/power(d1.doubleValue(),-ival));
+					return Double.valueOf(1.0/power(d1.doubleValue(),-ival));
 			}
 
-			return new Double(Math.pow(d1.doubleValue(),d2.doubleValue()));
+			return Double.valueOf(Math.pow(d1.doubleValue(),d2.doubleValue()));
 		}
 	}
 	
@@ -86,7 +86,7 @@ public class Power extends PostfixMathCommand
 		Complex temp = c1.power(c2);
 
 		if (temp.im()==0)
-			return new Double(temp.re());
+			return Double.valueOf(temp.re());
 		else
 			return temp;
 	}
@@ -96,7 +96,7 @@ public class Power extends PostfixMathCommand
 		Complex temp = c.power(d.doubleValue());
 		
 		if (temp.im()==0)
-			return new Double(temp.re());
+			return Double.valueOf(temp.re());
 		else
 			return temp;
 	}
@@ -107,7 +107,7 @@ public class Power extends PostfixMathCommand
 		Complex temp = base.power(c);
 		
 		if (temp.im()==0)
-			return new Double(temp.re());
+			return Double.valueOf(temp.re());
 		else
 			return temp;
 	}
