@@ -37,7 +37,7 @@ public class Range extends PostfixMathCommand
 		Vector res = new Vector(steps);
 		res.setSize(steps);
 		for(int i=0;i<steps;++i)
-			res.set(i,new Double(low+inc*i));
+			res.set(i,Double.valueOf(low+inc*i));
 		return res;
 	}
 	public void run(Stack inStack)
