@@ -31,7 +31,7 @@ public class UMinus extends PostfixMathCommand
 		if (param instanceof Complex)
 			return ((Complex)param).neg();
 		if (param instanceof Number)
-			return new Double(-((Number)param).doubleValue());
+			return Double.valueOf(-((Number)param).doubleValue());
 
 		throw new ParseException("Invalid parameter type");
 	}
